--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -50,6 +50,24 @@
 	font-variant: all-small-caps;
 }
 
+#the-bibulous-business-of-a-matter-of-taste blockquote{
+	padding-left: auto;
+	padding-right: auto;
+	text-align: center;
+	text-indent: 0;
+}
+
+#the-bibulous-business-of-a-matter-of-taste blockquote p:first-of-type{
+	font-variant: small-caps;
+}
+
+#the-bibulous-business-of-a-matter-of-taste blockquote:first-of-type{
+	padding-left: auto;
+	padding-right: auto;
+	max-width: 55%;
+	text-align: right;
+}
+
 [epub|type~="z3998:song"] p,
 [epub|type~="z3998:verse"] p{
 	text-align: initial;
@@ -81,6 +99,34 @@ p span.i1{
 p span.i2{
 	padding-left: 3em;
 	text-indent: -1em;
+}
+
+/* letter styling */
+[epub|type~="z3998:letter"] header{
+	text-align: right;
+}
+
+footer{
+	margin-top: 1em;
+	text-align: right;
+}
+
+[epub|type~="z3998:salutation"] + p,
+[epub|type~="z3998:letter"] header + p{
+	text-indent: 0;
+}
+
+[epub|type~="z3998:sender"],
+[epub|type~="z3998:recipient"],
+[epub|type~="z3998:salutation"],
+[epub|type~="z3998:signature"]{
+	font-variant: small-caps;
+}
+
+[epub|type~="z3998:postscript"]{
+	margin-top: 1em;
+	text-align: initial;
+	text-indent: 0;
 }
 
 /* figure styling */
