--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -117,14 +117,14 @@ footer{
 /* figure styling */
 figure{
 	break-inside: avoid;
-	margin: 1em 40px;
-	text-align: center;
+	margin: 1em 2.5em;
 }
 
 figure img{
 	display: block;
 	margin: auto;
-	width: 100%;
+	max-height: 100vh;
+	max-width: 100%;
 }
 
 .telegram{
